--- a/gb/24/2/14/n14181289.md
+++ b/gb/24/2/14/n14181289.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【菁英论坛】乱世降临 中共建政以来最大命案</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14181297-1200-x-800-600x400.jpg" />
 <h6>传山东除夕夜命案21人；枫桥经验失败，农村灭门案频发；社会救济机制失效，血仇定律风行，中国社会更不安全。（《菁英论坛》提供）
@@ -10,20 +10,20 @@
 </p>
 <p><center><a title="传山东除夕夜命案21人；枫桥经验失败，农村灭门案频发；社会救济机制失效，血仇定律风行，中国社会更不安全【 #精英论坛 】| #新唐人电视台 02/14/2024" src="https://www.ganjingworld.com/embed/1ghbspnb29aCz2Cr1S0fq2sog1641c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <h2>莒县凶杀案疑点多 疑凶可能有死亡名单</h2>
-<p>《大纪元时报》总编辑郭君在《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8F%81%E8%8B%B1%E8%AE%BA%E5%9D%9B.md#1">菁英论坛</a>》节目中表示，大纪元记者采访了一位河洛镇的居民，宅科村就是在河洛镇，这位居民的一个中学同学被杀了，另外一个朋友的男朋友也被杀了。她说凶手用的是枪，是猎枪或者是自制的枪，故意选择大年三十夜里、大年初一刚到零时的时候动手，那个时候全村都在放鞭炮，就把那个枪声给盖住了。大年三十晚上杀了十一口人，五个家庭都没了，没人知道是谁杀的。初一早上杀手又回来了，再杀了十个人，一共有二十一人遇害。目前还有三个人在抢救当中，她说有一家人姓刘，全家七口人都被杀了。大年初一早上宅科村的一位医生赶去救人，结果也遭枪杀，这位医生据说还很年轻，家里还有一个小孩。此外凶手还杀了另外两名警察。</p>
+<p>《大纪元时报》总编辑郭君在《菁英论坛》节目中表示，大纪元记者采访了一位河洛镇的居民，宅科村就是在河洛镇，这位居民的一个中学同学被杀了，另外一个朋友的男朋友也被杀了。她说凶手用的是枪，是猎枪或者是自制的枪，故意选择大年三十夜里、大年初一刚到零时的时候动手，那个时候全村都在放鞭炮，就把那个枪声给盖住了。大年三十晚上杀了十一口人，五个家庭都没了，没人知道是谁杀的。初一早上杀手又回来了，再杀了十个人，一共有二十一人遇害。目前还有三个人在抢救当中，她说有一家人姓刘，全家七口人都被杀了。大年初一早上宅科村的一位医生赶去救人，结果也遭枪杀，这位医生据说还很年轻，家里还有一个小孩。此外凶手还杀了另外两名警察。</p>
 <p>这位受访者还透露，她说当地村民知道有人被杀的时候是第二天早上去串门拜年才发现人死在家里，警察直到中午才赶过来。警察来的时候，那位医生已经死了。她说大家都传作案凶手至少有三个人或者是四到五人，目前还有两名凶手在逃。因此她们都很害怕，也不敢出门。2月11号的时候，她还去了宅科村看，但是警察就不让进了，全部都封起来了，警察也不让人们对外说发生了什么事。</p>
-<p>大纪元资深编辑与主笔石山在《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8F%81%E8%8B%B1%E8%AE%BA%E5%9D%9B.md#1">菁英论坛</a>》表示，这个案件里有很多东西值得说一说。好多消息和大纪元记者都说，凶手是用枪，但是什么枪，有说猎枪，有说是钉枪，就是搞工程打钉子的枪。但是我记得每年中国都有什么防暴禁枪的专项行动，过去几年这种行动做了非常多，说收了多少枪如何如何。还有另外一个问题，如果像大纪元记者采访的那样，凶手半夜杀了人，按道理来讲，他应该跑掉了，他为什么第二天凌晨又返回去又杀人？这个人真的就是要有非常大的深仇大恨才会这么干。他不是说冲动之下杀人，他是精心计划的，完全就是策划好了，他可能有个名单，这些人我都要杀。那可能中间有些人比如说那个医生可能就是误杀了，那个警察也是误杀了，因为现在中国很多村里都有辅警，村村有辅警，现在这是中国的新政策，所以那个辅警可能也是外面巡逻碰上了，那也就完蛋了。</p>
+<p>大纪元资深编辑与主笔石山在《菁英论坛》表示，这个案件里有很多东西值得说一说。好多消息和大纪元记者都说，凶手是用枪，但是什么枪，有说猎枪，有说是钉枪，就是搞工程打钉子的枪。但是我记得每年中国都有什么防暴禁枪的专项行动，过去几年这种行动做了非常多，说收了多少枪如何如何。还有另外一个问题，如果像大纪元记者采访的那样，凶手半夜杀了人，按道理来讲，他应该跑掉了，他为什么第二天凌晨又返回去又杀人？这个人真的就是要有非常大的深仇大恨才会这么干。他不是说冲动之下杀人，他是精心计划的，完全就是策划好了，他可能有个名单，这些人我都要杀。那可能中间有些人比如说那个医生可能就是误杀了，那个警察也是误杀了，因为现在中国很多村里都有辅警，村村有辅警，现在这是中国的新政策，所以那个辅警可能也是外面巡逻碰上了，那也就完蛋了。</p>
 <p>石山说，其实在法治不张的地方，基本上都是这样，我们叫做血仇定律，你杀我一个人，我就杀你一个人，就是用这种东西，我们也可以叫它自然律。中国整个治安恶化有个阶段，在社会发生巨大变化，在这个转折期往往会出一些比较恶性的案件。我记得1990年代有一个特警，拿着枪冲到天安门，在北京建国门那一带打死了很多人，还有杨佳那个案子，其实都是各种冤情各种冲突导致的。因为这个社会没有一个弹性，没有一个空间，没有一个救济的渠道，现在由政府一把抓的时候，这种事情可能真的会越来越多。</p>
 <h2>农村灭门案频发 枫桥经验彻底失败</h2>
 <p>电子杂志《大参考》主编李洪宽在《菁英论坛》表示，山东莒县这个案子真正的细节，包括犯罪动机，现在我们还不得而知，但是这表明了习近平推广的枫桥经验彻底失败了。因为政府现在封锁一切消息，导致真实的消息没有办法传出来，所以我们只能大概地把这个恶性事件的原因归咎到政府管理上，人民之所以走上这样的杀人道路，一定是对政府的调解机制失去了信心，人民自己在执法，这是社会将要动荡的标志。现在这种恶性杀人案，有的是专门挑节假日，去年临近过年在浙江农村也发生了一个类似的灭门案，死了6个人。这次死的人数从一开始传出来的消息，有说死了四十人的，有说死了二十人的，这个细节我们都不知道，比起去年浙江灭门案可能案情更复杂。</p>
-<p>李洪宽说，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>现在处于萧条和崩溃的阶段，很多人的日常生活发生了根本性的改变。过去能赚钱的能供楼的，现在可能供不上了，赚不到钱了，经济导致犯罪可能是一个最重要的因素。尤其现在股市这样的跌势，可能很多炒股的人活不下去，很多人找不到挣钱的办法，这都是把人往生活的边缘上在逼，很多人的心理承受能力差，那可能就选择走极端。所以中国社会确实面临着巨大的考验，怎么样度过共产党崩溃过程中的这个混乱阶段，对每一个人的生存智慧都是一个考验。</p>
+<p>李洪宽说，中国经济现在处于萧条和崩溃的阶段，很多人的日常生活发生了根本性的改变。过去能赚钱的能供楼的，现在可能供不上了，赚不到钱了，经济导致犯罪可能是一个最重要的因素。尤其现在股市这样的跌势，可能很多炒股的人活不下去，很多人找不到挣钱的办法，这都是把人往生活的边缘上在逼，很多人的心理承受能力差，那可能就选择走极端。所以中国社会确实面临着巨大的考验，怎么样度过共产党崩溃过程中的这个混乱阶段，对每一个人的生存智慧都是一个考验。</p>
 <h2>中共公安命案侦破率100%？假盛世 真乱世</h2>
 <p>独立电视制片人李军在《菁英论坛》表示，这两三年中国国内的凶杀案其实在不断上升，一些媒体也有这方面的报导，像去年包括网易都报过，说为什么现在恶性杀人案这么多？为什么中国人戾气这么重？但是在中国绝大部分案件都被控制住了，不让报，而且网上这样的报导出来之后，也很快就被删掉。中国媒体报导的都是政府部门的宣传内容，比如说中国现在是世界上最安全的国家，杀人案大概只有十万分之零点五，比西方低很多很多，所以我们很安全。</p>
 <p>其实这个十万分之零点五的造假成分是挺大的。我知道一个情况，就是从2004年开始中共提出一项要求，要公安部命案必破。但是作为警察和官员，他们都很清楚，怎么可能命案必破，杀人犯都是傻子你才能命案必破。在这个要求出台之前，很多时候中国重大杀人案的破案率，我通过圈子中的朋友了解到，大概是百分之五六十。2004年提出来，要求通过几年的努力后杀人命案的破案率要达到百分之八十五。但是从第二年开始，公安部和地方各级公安报上来的破案率就全是百分之百。我当时也问过朋友，我说你们怎么做到的？他说很简单，不破不报啊。就是这个案件不破，我就不往上报。所以普通民众根本就不知道发生了多少命案。</p>
 <p>李军说，现在中国这种恶性杀人案，恶性刑事案件，其实处于一种很快的上升趋势。经济问题肯定是一个原因，但是在深层社会来讲可能还有另外两个原因：一个就是中国媒体自己说的，为什么中国人戾气这么重？这是一个；第二个就是官民的积怨太多。大家看到这一两年村支书成了一个高死亡率的职位，很多案件都是这边一个村支书一家被杀了，那边又是一个村支书被杀了，为什么会有这么多村支书被杀？就是因为他在和民众接触过程中，很多时候是采用一种非常暴力蛮横的态度，甚至是地方一霸的那种方式对待民众，而执法部门又不按照规矩来执法。像这次山东这个案件，我个人认为大概率是因为执法上出了很大问题，让人家坐了几年牢，那他出来之后肯定要报复报仇。这就是杨佳那种做法，你不给我一个说法，我就给你一个说法。这种积怨和这种报复性的做法，最后社会上的恶性案件就会越来越多。</p>
 <h2>社会救济失效 底层无出路 杨佳方式增多</h2>
 <p>郭君在《菁英论坛》表示，2022年中共要开二十大，在全中国搞了治安专项行动，公安部的公告说全中国抓了140万人，这是什么概念？如果按照14亿人口算，等于是每1000人就有1人被抓了。我估计被抓的都是各地公安说的治安死角，就是有些人公安觉得他可能有问题，但又抓不到什么证据，或者没有什么现行的问题，这些人在专项行动中都可能被抓起来了。基本上各地认为可能有问题的都被抓了，因为是为了配合二十大。但实际上2023年中共公安部说，各种刑事犯罪和2022年基本持平。也就是说抓了140万人之后，治安没有变好，这是官方自己公布的数据。</p>
-<p>郭君说，治安恶化通常是整个社会形势变化的一个结果，而不是原因，尤其是经济变化的结果。最近两年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>滑坡，居民收入下降、企业破产、老百姓资产下降，过去很多中产阶层，现在也掉到穷人队伍中了。这样的情况拖下去，失业增加，尤其是年轻人失业增加，可以肯定治安会变差。</p>
+<p>郭君说，治安恶化通常是整个社会形势变化的一个结果，而不是原因，尤其是经济变化的结果。最近两年中国经济滑坡，居民收入下降、企业破产、老百姓资产下降，过去很多中产阶层，现在也掉到穷人队伍中了。这样的情况拖下去，失业增加，尤其是年轻人失业增加，可以肯定治安会变差。</p>
 <p>另外还有一点，很多地方现在缩减公务员人数，减少政府开支，临时工和编外人员首当其冲。在中国有大批辅警被裁员，第一线执法者都会减少，影响当然也会很大。但最重要的，我认为是中共执法越来越不讲道理、不讲程序、非常霸道，不光是警察，还有城管，还有其他公务员都有这些行为，这些因素都会刺激民变的发生。</p>
 <p>石山在《菁英论坛》表示，其实基本上是两个问题相辅相成的。一个是经济下滑，就是经济崩溃，出现大危机；第二个是整个社会运行的机制失效，这失效的最重要原因就是整个救济、对社会救济的整个机制完全没有了。像现在中国就是这样，你去北京上访，有可能吗？你如果有冤情了，你有任何一个渠道可以把它挽回吗？基本上是不存在的。所以对于底层的人就有两个方法，一是忍气吞声就这样了，第二个就是忍不下去要讨个说法，那唯一的方法就是杨佳的方法。</p>
 <p>新唐人、大纪元推出的新档电视节目《菁英论坛》，是立足于华人世界的高端电视论坛，该节目将汇集全球各界菁英，聚焦热点议题，剖析天下大势，为观众提供有关社会时事和历史真相的深度观察。</p>
@@ -32,37 +32,35 @@
 <p>责任编辑：李昊#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973734.md#1">【菁英论坛】预测中共垮台 许志永丁家喜遭重判</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/20/n14001028.md#1">【菁英论坛】俄“匕首”被拦截 俄乌战拐点到？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/16/n14017618.md#1">【菁英论坛】袁红冰：习近平的酒后真容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052573.md#1">【菁英论坛】查医疗腐败 全行业大坍塌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：更深层次听音体验 苹果耳机有优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/15/n13973734.md#1">【菁英论坛】预测中共垮台 许志永丁家喜遭重判</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/20/n14001028.md#1">【菁英论坛】俄“匕首”被拦截 俄乌战拐点到？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/16/n14017618.md#1">【菁英论坛】袁红冰：习近平的酒后真容</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/11/n14052573.md#1">【菁英论坛】查医疗腐败 全行业大坍塌</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/17/n10981686.md#1" target="_blank">两位古琴大师的悲剧：毁琴自尽 文革失踪</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/12/n10478618.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171656.md#1">我们竟然过了一百年的假“春节”？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173543.md#1">【未解之谜】一切皆有定数？预言中的中国未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14170820.md#1">过年习俗：腊月到正月 22天不重样！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178265.md#1">“一杯牛奶”怎样带来“大改变”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/7/n14175844.md#1">【百年真相】武装走私毒品 中共早年续命秘方</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178682.md#1">【中国禁闻】中国病死猪肉流入市场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/14/n14180814.md#1">【晚间新闻】美国国土安全部部长遭弹劾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179402.md#1">传山东爆凶案 消息被封锁 官方称超十人亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179616.md#1">新年山东爆特大枪杀案 村民述细节：21死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178854.md#1">Costco这5种大包装居家商品未必值得买</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179782.md#1">陆女星贾玲减重50公斤 神隐8个月现身爆哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178860.md#1">杜可风澳洲迎娶大陆女导演黑文 婚礼画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/13/n14180324.md#1">误将黄明志反共歌当新年歌 陆网民账号遭封禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179693.md#1">《金门》入围奥斯卡 导演：下部片聚焦邓丽君</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/13/n14180066.md#1">林逸欣除夕返乡孝亲 偕夫上街喜获3万奖金</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">针织帽 男女皆宜 61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/12/n14179426.md#1">专家分享7招 增进你与配偶或情侣的关系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/13/n14180157.md#1">龙年趣谈 属龙的人到这个国家生肖变蜗牛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14168968.md#1">猫行为解读：磨爪搞破坏 家俱破破烂烂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/7/n14175172.md#1">夜尿太多睡不好？1碗补肾茶让你和失眠说拜拜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346853.md#1">【财经非常道】美非农报告亮眼 降息降多了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343383.md#1">【全球新闻】超级飓风逼近佛州 百万人紧急撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/14/n14181289.htm">【菁英论坛】乱世降临 中共建政以来最大命案</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/14/n14181289.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/14/n14181289.htm">【菁英论坛】乱世降临 中共建政以来最大命案</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/14/n14181289.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
