--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ygizoop#1" target="_blank">首页</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/1?eofgbfm" target="_blank">动态网</a> | <a href="https://d1u99il8548gs4.cloudfront.net/2?lqwynl" target="_blank">大纪元</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/4?zvjyqll" target="_blank">看中国</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/pHh5q?dhnahrhqu" target="_blank">新生网</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/tktpt?zvgvyu" target="_blank">阿波罗网</a> | <a href="https://dycg1eql8aigr.cloudfront.net/Mjpvu?zocdxvlq" target="_blank">干净世界</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/10?atonh" target="_blank">退党服务</a> | <a href="https://d2n08tj75ohh5.cloudfront.net/Rffqf?vtqbtv" target="_blank">明慧广播</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/nw9Vn?gmios" target="_blank">传奇时代</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/AF9AG?zypsyfj" target="_blank">新境界影视</a> | <a href="https://d124e4v75n9sum.cloudfront.net/zqMQA?bhscx" target="_blank">文昭谈论</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/7?tgqgva" target="_blank">明慧</a></p><p><a href="https://dsgpxulwvf05x.cloudfront.net/9?kduvqn" target="_blank">大法</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/3?elvqbznyw" target="_blank">新唐人</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/obAhT?sogymk" target="_blank">人民报</a> | <a href="https://dlvlk7o3qgp9v.cloudfront.net/xXNHu?qveoeyqr" target="_blank">放光明</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/5?zbwbhdukn" target="_blank">新纪元</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/6?omodysc" target="_blank">希望之声</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/11?czrgrrl" target="_blank">无界网络</a> | <a href="https://d3vg08phoazui6.cloudfront.net/Pueji?aiovbm" target="_blank">追查国际</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/16?dpdedhz" target="_blank">明慧之窗</a> | <a href="https://d239x61949z6p.cloudfront.net/LdvzZ?vxdzjcqnp" target="_blank">细语人生</a> | <a href="https://dycmgeziwp90b.cloudfront.net/fBn3r?mcgimnlp" target="_blank">新世纪影视</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/PUWMb?scjnduy" target="_blank">江峰时刻</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/8?osyjdrif" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?qkbsojc#1" target="_blank">首页</a> | <a href="https://d124e4v75n9sum.cloudfront.net/1?fsaei" target="_blank">动态网</a> | <a href="https://d15m60lsma25jk.cloudfront.net/2?rtpqcfo" target="_blank">大纪元</a> | <a href="https://d2zw89wk00y815.cloudfront.net/4?ztcrcrp" target="_blank">看中国</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/pHh5q?fsvlgk" target="_blank">新生网</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/tktpt?vpssnijj" target="_blank">阿波罗网</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/Mjpvu?qxnxglwbc" target="_blank">干净世界</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/10?usuojwogj" target="_blank">退党服务</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/Rffqf?zniudgyji" target="_blank">明慧广播</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/nw9Vn?wrwuiyu" target="_blank">传奇时代</a> | <a href="https://doh73o6c3dnba.cloudfront.net/AF9AG?wewxlks" target="_blank">新境界影视</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/zqMQA?eefwismld" target="_blank">文昭谈论</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/7?bdtkxb" target="_blank">明慧</a></p><p><a href="https://d1qf0g0z67vzsk.cloudfront.net/9?mzvwkrq" target="_blank">大法</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/3?roqjqfd" target="_blank">新唐人</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/obAhT?jqfuswi" target="_blank">人民报</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/xXNHu?pgoktlic" target="_blank">放光明</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/5?tlaitik" target="_blank">新纪元</a> | <a href="https://doyvntponycdh.cloudfront.net/6?hrkdcjeg" target="_blank">希望之声</a> | <a href="https://dycmgeziwp90b.cloudfront.net/11?ybkhbha" target="_blank">无界网络</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/Pueji?cxjrmc" target="_blank">追查国际</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/16?favaxhge" target="_blank">明慧之窗</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/LdvzZ?gcqqjnent" target="_blank">细语人生</a> | <a href="https://d15m60lsma25jk.cloudfront.net/fBn3r?puhhbu" target="_blank">新世纪影视</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/PUWMb?revcbfpaj" target="_blank">江峰时刻</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/8?xsjqox" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347306.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347376-shutterstock_2450425671-320x200.jpg"><p align="center">飓风来袭 手机断网 如何通过iPhone发短信</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347306.md#1" title="飓风来袭 手机断网 如何通过iPhone发短信""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347376-shutterstock_2450425671-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347201.md#1" title="A股暴跌 沪指失守3300点 创业板指跌逾10%""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347361-GettyImages-2176644241-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346710.md#1" title="最富国家排名 欧洲居多 美国第9 台湾第14""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/08/id14046932-shutterstock_357508955-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346643.md#1" title="以色列总理：已击毙真主党领导人的接任者""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/09/id14340409-AFP__20240927__36H46F9__v2__Preview__UnDiplomacyUnga-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347409.md#1">湖南湘潭堂兄弟嫌隙酿命案 致3死2伤</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347429.md#1">日本外相和王毅通话 要求中方澄清两件事</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346767.md#1">米尔顿来袭在即 仍有16万户因海伦飓风断电</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347445.md#1">美国将出席东盟峰会 讨论缅甸内战和南海争端</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347409.md#1">湖南湘潭堂兄弟嫌隙酿命案 致3死2伤</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347429.md#1">日本外相和王毅通话 要求中方澄清两件事</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347419.md#1">对OpenAI员工网络钓鱼 中共骇客行动失败</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347432.md#1">【马克时空】以哈战争一周年 开启领导先走模式</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347432.md#1">【马克时空】以哈战争一周年 开启领导先走模式</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347410.md#1">上海股市遭遇新冠爆发后最大跌幅 华尔街坚挺</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347306.md#1">飓风来袭 手机断网 如何通过iPhone发短信</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347379.md#1">消息：川普计划在纽约市地标举行集会</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347390.md#1">飞行员空中死亡 土耳其航空航班迫降纽约机场</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347331.md#1">搞笑一幕 考拉凌晨溜进悉尼车站“探险”</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347022.md#1">夫妇翻修18世纪老宅 发现地下藏着一口古井</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346454.md#1">前政治局常委吴邦国病亡 “五不搞”曾引争议</a><br>
@@ -106,13 +106,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344335.md#1">【新闻欣视角】大陆流行登革热 新冠卷土重来</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344409.md#1">【新闻看点】习遭剪裙边？军队“监斩官”被贬</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344321.md#1">【菁英论坛】特警击毙公安局长 官官互害时代</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1icivwj1wylrn.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1icivwj1wylrn.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,127</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d36fjg4rzv6tc4.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d36fjg4rzv6tc4.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,127</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 436,972,351 人
+!共 436,972,424 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346950.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14346958-1dfe7a48ac08050ad3b406e5303b2540-e1728443593604-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346950.md#1">心理健康日前 华人集会揭中共精神病院迫害</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344949.md#1">维权人士宋嘉鸿揭露上海黑监牢名录（三）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344733.md#1">“十一”前 北京公益人士朱斌突遭刑事拘留</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344440.md#1">两党议员促拜登营救遭中共关押的美国人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343741.md#1">【新闻大家谈】三中全会悬案 引中共元老反击？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14343895.md#1">北京法轮功学员朱颖狱中病重 美专家吁释放</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347037.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13175217-151589-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347037.md#1">“十一”后中国机票大跳水 杭州至大连仅150元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346881.md#1">调查：中国跨境电商内卷严重 利润屡创新低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346744.md#1">击鼓传花游戏 中国股市设计理念和欧美不同</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346737.md#1">十一假期为何未让香港零售商松口气</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346598.md#1">中共发改委发布会后 在美上市中资股齐下跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346358.md#1">中国股市开高走低失去动力 港股大跌</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347429.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347437-AFP__20241001__36HQ62E__v1__Preview__JapanPolitics-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347429.md#1">日本外相和王毅通话 要求中方澄清两件事</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347419.md#1">对OpenAI员工网络钓鱼 中共骇客行动失败</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347397.md#1">曾戴LV丝巾受访惹议 珠海女局长履新5个月落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347308.md#1">敦煌市前市长贾泰斌落马 搭档已获刑14年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343382.md#1">【晚间新闻】纽约市政府一天损失三大要员</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343383.md#1">【全球新闻】超级飓风逼近佛州 百万人紧急撤离</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347409.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347434-MixCollage-09-Oct-2024-05-31-PM-7075-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347409.md#1">湖南湘潭堂兄弟嫌隙酿命案 致3死2伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347174.md#1">辽宁大连一架直升机撞地起火</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346938.md#1">抗议警方阻碍调查 山东环保人士自我囚禁13天</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346975.md#1">山东泰安又发生汽车撞学生事件 传2死3伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346521.md#1">广州60岁男子在小学门口持刀捅人 3人受伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346288.md#1">海口经济学院2名大学生校内溺亡 评论区炸锅</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347082.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347082.md#1">服务器出故障 四川全省身份证办理业务暂停</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346776.md#1">大陆网红“东北雨姐”跑路？ 拍摄基地人去房空</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346610.md#1">南昌男童从幼儿园二楼跌落 教育局：监控损坏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346523.md#1">爷孙3人2死1伤 广东阳春血案背后细节曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346390.md#1">河南一直升机降落时尾翼碰到高压线 坠落起火</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346322.md#1">广西住宅半夜起火 熟睡主人被狗叫醒得救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342660.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/10/id14342666-20241002-mark-WI02-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342660.md#1">奇幻新片布洛斯南演国王 囚禁“人鱼”范冰冰</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/22/n14336078.md#1">异见诗人王藏之子遭校园霸凌 一周后才获立案</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/22/n14336354.md#1">澳加英收紧政策 中国学生留学越来越难？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/20/n14334834.md#1">中国男子足球队世界排名降至8年来新低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/19/n14334424.md#1">中国象棋特级大师王天一、王跃飞被终身禁赛</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331539.md#1">兰州大学在校研究生总量首超本科生 引热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344833.md#1">钟原：元老、军队反弹 中共党魁失势？</a><br>
